--- a/.github/workflows/daily-task-131.yml
+++ b/.github/workflows/daily-task-131.yml
@@ -106,7 +106,7 @@ jobs:
     - name: Run unicom daily task
       if: ${{ env.ENABLE_UNICOM }}
       env:
-        user: ${{secrets.unicom_user}}
+        user: ${{secrets.unicom_user2}}
         password: ${{secrets.unicom_password}}
         appid: ${{secrets.unicom_appid}}
       run: node index.js unicom --user=${user} --password=${password} --appid=${appid} ----tryrun
